--- a/public/templates/checkout.html
+++ b/public/templates/checkout.html
@@ -39,13 +39,13 @@
 
 <div class="why-choose360notion-bg">
 <div class="container masthead-text-title">
-  <h1 class="masthead-subtitle  title-size text-center"> <b class="masthead-title-big"> Checkout </b> </h1>
+  <h1 class="masthead-subtitle  title-size text-center"> <b class="masthead-title-big"> checkout </b> </h1>
 </div>
 <div class="content">
   <div class="container">
     <div class="row">
    
-        <h3 class="text-center"> Order Informations</h3>
+        <h3 class="text-center"> Order Information</h3>
       
     </div>
     <p class="row-divider"></p>
@@ -53,49 +53,54 @@
       <thead>
         <tr>
           <th scope="col"><span >Order Detail</span></th>
-          <th scope="col"><span >Quantity</span></th>
+          <th scope="col"><span >Number of Members</span></th>
          
-          <th><span>Price</span></th>
+          <th><span>Month/Member</span></th>
           <th><span>Total</span></th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td scope="row"> Starter</td>
+          <td scope="row"> <b>Mega Plan
+  </b> (
+            3-50 Members, 
+            Unlimited Storage Limit)</td>
           <td><span id="">
-            <input name="" value="1" size="5" type="text">
-          </span></td>
-          <td scope="row">20 usd</td>
-          <td scope="row"><span id="">20.00 usd</span></td>
-      
+            <input name="" value="0" size="5" type="text">
+            </span></td>
+          <td scope="row">$ 30.00</td>
+          <td scope="row"><span id="">$ 00.00</span></td>
+          
         </tr>
       </tbody>
     </table>
+ 
+<div>
+ 
+   <b>Promotional Code</b>
+
+</div>
+
+  <div class="row-divider">
+    <input id="name" class="form-control promontion-code" type="text" data-required="true" name="name">  <a class="btn btn-primary padding-top">Apply</a>
+   <p></p>
+     </div>
+
+
+
     <p class="row-divider"></p>
     <div class="row text-center">
-      <h3> Billing Informations</h3>
-      <p>You need a valid credit card to pay for your organization's chosen plan. Payments are charged monthly.<br> If you have any problems with your payment method, please contact us at @360notion.com </p>
-    <p class="row-divider"></p>
-        <p class="row-divider"></p>
-    <div class="col-xs-6"><div class=" billing-form">
+      <h3>Enter Your Billing Information</h3>
+     <p> 360notion.com accepts all major credit & debit cards. All payments are secure with 256-bit encryption.</br> If you have any questions, please contact customer service at admin@myabuy.com</p>
+
+   <br></br> 
+    <div class="col-xs-6 "><div class=" billing-form">
 <div class="form-group">
-  <label for="name">First name:</label>
+  <label for="name">Name On Card:</label>
   <input id="name" class="form-control " type="text" data-required="true" name="name">
 </div>
 
-<div class="form-group">
-  <label for="name">Last name:</label>
-  <input id="name" class="form-control " type="text" data-required="true" name="name">
 
-</div>
-<div class="form-group">
-  <label for="name">Company name:</label>
-  <input id="name" class="form-control " type="text" data-required="true" name="name">
-</div>
-<div class="form-group">
-  <label for="name">Email:</label>
-  <input id="name" class="form-control " type="text" data-required="true" name="name">
-</div>
 
 <div class="form-group">
   <label for="name">Billing Address 1:</label>
@@ -112,19 +117,7 @@
   <input id="name" class="form-control " type="text" data-required="true" name="name">
 
 </div>
-<div class="form-group">
-  <label for="name">State/Province:</label>
-<select id="validateSelect" class="form-control " data-required="true" name="">
-<option value="">Please Select</option>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5">5</option>
-<option value="6">6</option>
-</select>
 
-</div>
 <div class="form-group">
   <label for="name">Zip/Postal Code:</label>
   <input id="name" class="form-control " type="text" data-required="true" name="name">
@@ -143,39 +136,21 @@
 </select>
 
 </div>
-<div class="form-group">
-  <label for="name">Phone number:</label>
-  <input id="name" class="form-control " type="text" data-required="true" name="name">
-
-</div>
-<div class="form-group">
-  <label for="name">State/Province:</label>
-<select id="validateSelect" class="form-control parsley-validated" data-required="true" name="validateSelect">
-<option value="">Please Select</option>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5">5</option>
-<option value="6">6</option>
-</select>
-</div>
 </div></div>
     
-    <div class="col-xs-6 ">
+    <div class="col-xs-6 padding-top ">
     <div class="billing-form">
     
     <div class="form-group">
-  <label for="name">Choose Credit card:</label>
+  <label for="name">Choose Credit Card:</label>
 <select id="validateSelect" class="form-control parsley-validated" data-required="true" name="validateSelect">
 <option value="">Please Select</option>
-<option value="1">Master</option>
-<option value="2">Visa</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5">5</option>
-<option value="6">6</option>
-</select>
+<option value="1">Visa</option>
+<option value="2">MasterCard</option>
+<option value="3">American Express</option>
+<option value="4">Diners Club</option>
+<option value="5">JCB and Discover</option>
+</select> <img src="https://www.merchantequip.com/image/?logos=v|m|a|d|jcb|dc&height=32" alt="Merchant Equipment Store Credit Card Logos" />
 </div>
 <div class="form-group">
   <label for="name">Card number:</label>
@@ -184,16 +159,39 @@
 </div>
 <div class="form-group">
   <label for="name">Expiration Date:</label>
-  <input id="name" class="form-control " type="text" data-required="true" name="name">
+<p>
+<select id="validateSelect" class="form-control date-form" data-required="true" name="validateSelect">
+<option value="">1</option>
+<option value="1">2  </option>
+<option value="2">3</option>
+<option value="3">4</option>
+<option value="4">5</option>
+<option value="5">5</option>
+<option value="5">6</option>
+<option value="5">7</option>
+<option value="5">8</option>
+<option value="5">9</option>
+</select>
+<select id="validateSelect" class="form-control date-form" data-required="true" name="validateSelect">
+<option value="">2014</option>
+<option value="1">2015  </option>
+<option value="2">2016</option>
+<option value="3">2017</option>
+<option value="4">2018</option>
+<option value="5">2019</option>
+
+</select> </p>
 
 </div>
 <div class="form-group">
-  <label for="name">Card Security Code: </label>
+  <label for="name">Security Code (CSC): <i class="fa fa-question-circle demo-element ui-tooltip text-left" title="" data-placement="right" data-toggle="tooltip" type="button" data-original-title="For Visa®, MasterCard® and Diners Club® the Security Code is the three-digit code located at the back of the card.  For JCB® the Security Code is the seven-digit code at the back of the card. For American Express® the Security Code is the four-digit code located at the front of the card."></i> </label>
   <input id="name" class="form-control " type="text" data-required="true" name="name">
-
+ 
 </div>
 <div class="form-group">
- <a class=" btn btn-primary"> Continute Checkout </a>
+ <div class="form-group">
+                        <button type="submit" class="btn btn-secondary-new btn-jumbo-new ">Continue Checkout</button>
+                      </div>
 </div>
     </div>
     </div>
