--- a/public/templates/faq.html
+++ b/public/templates/faq.html
@@ -495,32 +495,31 @@ We will apply the 10% commission to your company’s 360notion™ account the fo
                     <fieldset>
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                            <h4 class="modal-title" id="modal_label">Ask a question</h4>
+                            <h4 class="modal-title" id="modal_label">how can we help you?</h4>
                         </div>
                         <div class="modal-body">
                             <div class="form-group">
-                                <label form="email">Email Address</label>
+                                <label form="email">email</label>
                                 <input id="email"
                                     name="email"
                                     type="text"
                                     class="form-control validate[required,custom[email]]"
-                                    placeholder="user@email.com"/>
+                                    placeholder="Enter your work email address" id="placeholder"/>
                             </div>
 
                             <div class="form-group">
-                                <label form="email">Question</label>
+                                <label form="email">question</label>
                                 <textarea id="question"
                                     name="question"
                                     rows="5"
                                     class="form-control validate[required]"
-                                    placeholder="We will get back to you within 24 hours.">
+                                    placeholder="We will try to get back to you within 24 hours.">
                                 </textarea>
                             </div>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            &nbsp;
-                            <button type="submit" class="btn btn-primary  btn-default">Send</button>
+                        <div class="ask-question-footer text-center">
+                           
+                            <button type="submit" class="btn btn-primary  btn-jumbo-new">Send</button>
                         </div>
                     </fieldset>
                 </form>
